Panel colSpan & Map overflow fix

--- a/src/features/DataChart/DataChart.module.css
+++ b/src/features/DataChart/DataChart.module.css
@@ -53,6 +53,7 @@
 .MapContainer {
   display: flex;
   padding: 1em;
+  overflow: hidden;
 }
 
 .Map {
